--- a/public/home.html
+++ b/public/home.html
@@ -25,7 +25,7 @@
                     <form class="d-flex">
                       <a href="/" class="nav-link text-secondary">Homepage</a>
                       <a href="/network" class="nav-link text-secondary">Network</a>
-                      <a href="/creators" class="nav-link text-secondary">Creators</a>
+                      <a href="/news" class="nav-link text-secondary">News</a>
                       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                       <a href="/newcontent" class="btn btn-outline-primary">New Content</a>
                       &nbsp;&nbsp;<a href="/login" class="btn btn-primary">Login</a>
@@ -38,6 +38,11 @@
               <br><br>
 
               <div class="row">
+                <div class="col-sm-6">
+                  <div class="card">
+                    <img id="mainphone" src="{{url_for('static', filename='images/phone.png')}}" alt="Phone View">
+                  </div>
+                </div>
                 <div class="col-sm-6">
                   <div class="card">
                     <h1>Math for everyone!</h1>
@@ -61,11 +66,6 @@
                       </div><br>
                       <button type="submit" class="btn btn-primary w-100">Join for Free</button>
                     </form>
-                  </div>
-                </div>
-                <div class="col-sm-6">
-                  <div class="card">
-                    image
                   </div>
                 </div>
               </div>
